# friendly-rust-watch

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
aht10/: Cargo.toml
aht10/src/: lib.rs
src/: main.rs
tests/: test_devices.rs
