[package]
authors = ["Tony Albert Lima <80111558+TonyALima@users.noreply.github.com>"]
name = "friendly-rust-watch"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
bitflags = "2.8.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
panic-reset = "0.1.1"
shared-bus = "0.3.1"
ssd1306 = "0.8.0"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }
aht10 = {path = "./aht10"}

[[bin]]
name = "friendly-rust-watch"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dev-dependencies]
embedded-test = { version = "0.6.0" }

[[test]]
name = "test_devices"
harness = false

